[workspace]
resolver = "3"
members = [
  "crates/greeters",
  "crates/jsc6",
  "crates/logger",
  "crates/webkit-greeter",
  "crates/webkit-greeter-webext",
]
default-members = ["crates/webkit-greeter", "crates/webkit-greeter-webext"]

[workspace.package]
edition = "2024"
repository = "https://github.com/zaynchen/webkit-greeter"

[workspace.dependencies]
greeters = { path = "crates/greeters" }
gtk = { package = "gtk4", version = "0.10", features = ["v4_20"] }
jsc = { package = "jsc6", path = "crates/jsc6", version = "0.5" }
jsc6 = { package = "javascriptcore6", version = "0.5", features = ["v2_48"] }
logger = { path = "crates/logger" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
webkit = { package = "webkit6", version = "0.5", features = ["v2_50"] }
wwpe = { package = "webkit-web-process-extension6", version = "0.5", features = [
  "v2_48",
] }
