[package]
name = "greeters"
version = "0.1.0"
edition.workspace = true
description = "greeters for WebKit Greeter"
repository.workspace = true
license = "GPL-3.0-or-later AND LGPL-3.0-or-later"
keywords = ["greetd", "greeter", "lightdm", "webkit"]
categories = ["GUI"]

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
greetd_ipc = { version = "0.10", features = ["sync-codec"] }
hyprland = { git = "https://github.com/hyprland-community/hyprland-rs", branch = "master", optional = true }
jsc.workspace = true
libc = "0.2"
lightdm = { git = "https://github.com/ZaynChen/lightdm-rs.git", version = "0.1.0", optional = true }
logger.workspace = true
pwd = "1.4"
serde.workspace = true
serde_json.workspace = true
swayipc = { version = "4.0", optional = true }
thiserror = "2.0"
webkit.workspace = true
xkb-data = { version = "0.2", optional = true }
zbus = "5.14"

[build-dependencies]
glib-build-tools = "0.21"

[features]
greetd = ["wayland"]
hyprland = ["dep:hyprland"]
lightdm = ["dep:lightdm"]
sway = ["dep:swayipc"]
wayland = ["hyprland", "sway", "xkb"]
xkb = ["dep:xkb-data"]
