[package]
name = "greeters"
version = "0.1.0"
edition.workspace = true
description = "greeters for WebKit Greeter"
repository.workspace = true
license = "GPL-3.0-or-later AND LGPL-3.0-or-later"
keywords = ["greetd", "greeter", "lightdm", "webkit"]
categories = ["GUI"]

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
libc = "0.2"
log = "0.4"
pwd = "1"
serde.workspace = true
serde_json.workspace = true
zbus = "5"

thiserror = "2"

jsc.workspace = true
webkit.workspace = true

greetd_ipc = { version = "0.10", features = ["sync-codec"] }
lightdm_client = "0.1"

# keyboard layouts
hyprland = { git = "https://github.com/hyprland-community/hyprland-rs", branch = "master" }
swayipc = "4.0"
x11rb = "0.13"
xkb-data = "0.2"
