[package]
name = "jsc6"
version = "0.5.0"
edition = "2021"
description = "Rust bindings for JavaScriptCore 6"
documentation = "https://world.pages.gitlab.gnome.org/Rust/webkit6-rs/stable/latest/docs/javascriptcore6"
repository = "https://gitlab.gnome.org/World/Rust/webkit6-rs"
license = "MIT"
keywords = ["GUI", "gnome", "gtk-rs", "webkit"]
categories = ["GUI", "api-bindings"]

[dependencies]
jsc6.workspace = true
