[package]
name = "webkit-greeter-webext"
version = "0.1.0"
edition.workspace = true
description = "WebKit web extension for webkit greeter"
repository.workspace = true
license = "Apache-2.0"
keywords = ["greeter", "web-extension", "webkit"]
categories = ["GUI"]

[lib]
crate-type = ["cdylib"]
name = "webext"

[dependencies]
jsc.workspace = true
logger.workspace = true
serde_json.workspace = true
wwpe.workspace = true
