[package]
name = "webkit-greeter"
version = "0.1.0"
edition.workspace = true
description = "WebKit Greeter"
repository.workspace = true
license = "GPL-3.0-or-later"
keywords = ["greetd", "greeter", "lightdm", "webkit"]
categories = ["GUI"]
build = "build.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
greeters.workspace = true
logger.workspace = true
serde.workspace = true
serde_json.workspace = true
toml = { version = "1", features = ["serde"] }

gdkx = { workspace = true, optional = true }
gtk.workspace = true
jsc.workspace = true
webkit.workspace = true

[build-dependencies]
glib-build-tools = "0.22"

[features]
default = ["all"]
all = ["greetd", "lightdm"]

greetd = ["greeters/greetd"]

lightdm = ["greeters/lightdm", "x11"]
x11 = ["dep:gdkx"]
