[package]
name = "webkit-greeter"
version = "0.1.0"
edition.workspace = true
description = "WebKit Greeter"
repository.workspace = true
license = "GPL-3.0-or-later"
keywords = ["greetd", "greeter", "lightdm", "webkit"]
categories = ["GUI"]
build = "build.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
greeters.workspace = true
log = "0.4"
logger.workspace = true
serde.workspace = true
serde_json.workspace = true
toml = { version = "1", features = ["serde"] }

gtk.workspace = true
jsc.workspace = true
webkit.workspace = true
x11rb = "0.13"

[build-dependencies]
glib-build-tools = "0.22"
